haproxy-demo/ingress-controller-rbac.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ingress-controller
