haproxy-demo/http-svc.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    run: http-svc
  name: http-svc
spec:
  replicas: 2
  selector:
    matchLabels:
      run: http-svc
  template:
    metadata:
      labels:
        run: http-svc
    spec:
      containers:
        - name: http-svc
          image: gcr.io/google_containers/echoserver:1.3
          ports:
          - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  labels:
    run: http-svc
  name: http-svc
  namespace: default
spec:
  ports:
    - name: port-1
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    run: http-svc
